tests/compile-fail/integration_suite__integration__ecl_features__signature_without_arg0_in_not_timeline.snap
---
source: tests/integration/ecl_features.rs
expression: stderr
---
error: timeline instruction is missing T(...) argument
  ┌─ <mapfile>:3:6
  │
3 │ 1000 SS
  │      ^^ timeline instruction is missing T(...) argument


